todoyu timetracking changelog

timetracking 1.3.0 - not released yet
	* Changed: Change overtime rule in task details (added tolerance)
	* Added: Icon for overtime tasks
	* Added: UnittestRunner
	* Added: TodoyuTimetrackingTask->isTrackable() and ->hasTrackableStatus()

timetracking 1.2.0 - 2012-05-03
	* Added: Person filter widgets: has tracked time in project, tracked time for customer
	* Added: Show info about chargeable workload in track in the tracks list
	* Added: Starting first tracking of task of person in current day immediately stores a 0:00 track, visible for other persons as well (was previously stored not until stopping the tracking)
	* Changed: Made headlet content wider, allowing unwrapped display up to 6 digits of time percent
	* Changed: After jumping to task from headlet the headlet popout is now closed
	* Changed: Show chargeable time in tracking list
	* Changed: made also status "rejected" and "waiting" trackable
	* Changed: on starting timetracking, task status is always updated to "in progress"


timetracking 1.1.3 - 2011-12-13
	* Bugfix: Sub tasks were marked as running too
	* Added: TimetrackingProject (+Manager)
	* Added: TimetrackingTaskPreset (+Manager)
	* Added: ext_timetracking_workload_done to task preset
	* Changed: Used task type differentiated task tabs registration, incremented project dependency to 1.3.0
	* Changed: Renamed TodoyuTimetrackingSysmanagerRenderer => TodoyuTimetrackingSysmanagerManager
	* Changed: Task preset DB rename of start_tracking => ext_timetracking_start_tracking

timetracking 1.1.2 - 2011-11-17
	* Changed: Timetracking does not add anymore contextmenu items to deleted tasks
	* Changed: Don't hide open timetracking headlet when tracking is active
	* Translation: Polish

timetracking 1.1.1 - 2011-09-15
	* Bugfix: Spelling mistake in rights (track - editOwn, editOwnChargeable)
	* Added: Hooks: timetracking.start, timetracking.stop
	* Changed: Timetracking icon (changed from alarm clock to stopwatch)